versions/v4.2.0/doxygen/html/stm32wl__clock_8h_source.md
---
version: v4.2.0
source_url: https://docs.zephyrproject.org/4.2.0/doxygen/html/stm32wl__clock_8h_source.html
original_path: doxygen/html/stm32wl__clock_8h_source.html
---

| Logo | Zephyr API Documentation 4.2.0  A Scalable Open Source RTOS |
| --- | --- |

Loading...

Searching...

No Matches

stm32wl\_clock.h

[Go to the documentation of this file.](stm32wl__clock_8h.md)

1/\*

2 \* Copyright (c) 2022 Linaro Limited

3 \*

4 \* SPDX-License-Identifier: Apache-2.0

5 \*/

6#ifndef ZEPHYR\_INCLUDE\_DT\_BINDINGS\_CLOCK\_STM32WL\_CLOCK\_H\_

7#define ZEPHYR\_INCLUDE\_DT\_BINDINGS\_CLOCK\_STM32WL\_CLOCK\_H\_

8

9#include "[stm32\_common\_clocks.h](stm32__common__clocks_8h.md)"

10

[ 12](stm32wl__clock_8h.md#a186de4b3566a20794e4483a9569abe3c)#define STM32\_CLOCK\_BUS\_AHB1 0x048

[ 13](stm32wl__clock_8h.md#a5e58ef1846c185b04bed598b26ee9205)#define STM32\_CLOCK\_BUS\_AHB2 0x04c

[ 14](stm32wl__clock_8h.md#ab2a3c819828eb0186ac3a3f15f4b4569)#define STM32\_CLOCK\_BUS\_AHB3 0x050

[ 15](stm32wl__clock_8h.md#ac763945fc36124f9c978c423826faa95)#define STM32\_CLOCK\_BUS\_APB1 0x058

[ 16](stm32wl__clock_8h.md#ad25510091b50e823c9860089a9f23deb)#define STM32\_CLOCK\_BUS\_APB1\_2 0x05c

[ 17](stm32wl__clock_8h.md#adb7becb609763568b91303041c9cd4db)#define STM32\_CLOCK\_BUS\_APB2 0x060

[ 18](stm32wl__clock_8h.md#af7165e22b71d1beaf0dd4f59d5b4db6d)#define STM32\_CLOCK\_BUS\_APB3 0x064

19

[ 20](stm32wl__clock_8h.md#acc0577552371fcda95685f6424ecb4b2)#define STM32\_PERIPH\_BUS\_MIN STM32\_CLOCK\_BUS\_AHB1

[ 21](stm32wl__clock_8h.md#a561265772438ab8995251760c7f3dc30)#define STM32\_PERIPH\_BUS\_MAX STM32\_CLOCK\_BUS\_APB3

22

24/\* RM0461, §6.4.29 Clock configuration register (RCC\_CFGR3) \*/

25

26

28/\* defined in stm32\_common\_clocks.h \*/

30/\* Low speed clocks defined in stm32\_common\_clocks.h \*/

[ 31](stm32wl__clock_8h.md#a7bc1dd03186b763b407a044ddffb4ab2)#define STM32\_SRC\_HSI (STM32\_SRC\_LSI + 1)

[ 32](stm32wl__clock_8h.md#a542b4426a15d849545af2fd6012c520c)#define STM32\_SRC\_MSI (STM32\_SRC\_HSI + 1)

33/\* #define STM32\_SRC\_HSI48 TBD \*/

[ 35](stm32wl__clock_8h.md#a6cd4e305697f314401e5654b4dd5f25d)#define STM32\_SRC\_PCLK (STM32\_SRC\_MSI + 1)

[ 37](stm32wl__clock_8h.md#a473d0d57680b535a9e9298600a1e1aab)#define STM32\_SRC\_PLL\_P (STM32\_SRC\_PCLK + 1)

[ 38](stm32wl__clock_8h.md#ab3a03011d2d433feaff934c3828e1f27)#define STM32\_SRC\_PLL\_Q (STM32\_SRC\_PLL\_P + 1)

[ 39](stm32wl__clock_8h.md#aca252b1d875fbd9dce6350f1845e5439)#define STM32\_SRC\_PLL\_R (STM32\_SRC\_PLL\_Q + 1)

40

[ 42](stm32wl__clock_8h.md#af50f81a20c6e91a7a8611d1e59ca6260)#define CCIPR\_REG 0x88

43

[ 45](stm32wl__clock_8h.md#a70a10f70b4f5058508e8983ad0a4de3a)#define BDCR\_REG 0x90

46

[ 48](stm32wl__clock_8h.md#a6b894fe6e036f03831faddf28bce43c6)#define CFGR1\_REG 0x08

49

[ 52](stm32wl__clock_8h.md#a17f3ec5f86995a2c4087f2988a9486c5)#define USART1\_SEL(val) STM32\_DT\_CLOCK\_SELECT((val), 3, 0, CCIPR\_REG)

[ 53](stm32wl__clock_8h.md#ad67d92dfc439018a7a231e661d10d7f9)#define USART2\_SEL(val) STM32\_DT\_CLOCK\_SELECT((val), 3, 2, CCIPR\_REG)

[ 54](stm32wl__clock_8h.md#ad3e84eac634b9d943acea9b2ab884fb5)#define SPI2\_SEL(val) STM32\_DT\_CLOCK\_SELECT((val), 3, 8, CCIPR\_REG)

[ 55](stm32wl__clock_8h.md#aac31ca48bf87a722f6e0519f25f764dd)#define LPUART1\_SEL(val) STM32\_DT\_CLOCK\_SELECT((val), 3, 10, CCIPR\_REG)

[ 56](stm32wl__clock_8h.md#a3fbef8f2542fc6921236bd2709acf64c)#define I2C1\_SEL(val) STM32\_DT\_CLOCK\_SELECT((val), 3, 12, CCIPR\_REG)

[ 57](stm32wl__clock_8h.md#abdd79c9ce90458b53e81123d181fed98)#define I2C2\_SEL(val) STM32\_DT\_CLOCK\_SELECT((val), 3, 14, CCIPR\_REG)

[ 58](stm32wl__clock_8h.md#aa12a1d2ac790880b7148d1e5660eb941)#define I2C3\_SEL(val) STM32\_DT\_CLOCK\_SELECT((val), 3, 16, CCIPR\_REG)

[ 59](stm32wl__clock_8h.md#a042804bf8a52b3dd28033f8814442bfb)#define LPTIM1\_SEL(val) STM32\_DT\_CLOCK\_SELECT((val), 3, 18, CCIPR\_REG)

[ 60](stm32wl__clock_8h.md#aa713f6ff001bfa6352747e7a66e3f98a)#define LPTIM2\_SEL(val) STM32\_DT\_CLOCK\_SELECT((val), 3, 20, CCIPR\_REG)

[ 61](stm32wl__clock_8h.md#ac705aa5789ca3b11ac5115d22ec2a5e5)#define LPTIM3\_SEL(val) STM32\_DT\_CLOCK\_SELECT((val), 3, 22, CCIPR\_REG)

[ 62](stm32wl__clock_8h.md#a635d17ad991ded52d41a6e7b0bec5773)#define ADC\_SEL(val) STM32\_DT\_CLOCK\_SELECT((val), 3, 28, CCIPR\_REG)

[ 63](stm32wl__clock_8h.md#abfff4355a498febbcf4ebcb237930a57)#define RNG\_SEL(val) STM32\_DT\_CLOCK\_SELECT((val), 3, 30, CCIPR\_REG)

[ 65](stm32wl__clock_8h.md#a4836377699efa295c56d340e150695b0)#define RTC\_SEL(val) STM32\_DT\_CLOCK\_SELECT((val), 3, 8, BDCR\_REG)

[ 67](stm32wl__clock_8h.md#acc5c7aed4e842ca212471d7a58504821)#define MCO1\_SEL(val) STM32\_DT\_CLOCK\_SELECT(val, 0xF, 24, CFGR1\_REG)

[ 68](stm32wl__clock_8h.md#a2805cf7e0b5ed0a9bb4bfff863327081)#define MCO1\_PRE(val) STM32\_DT\_CLOCK\_SELECT(val, 0x7, 28, CFGR1\_REG)

69

70/\* MCO prescaler : division factor \*/

[ 71](stm32wl__clock_8h.md#aa6d6446aa7a1c84324475f6e8665fbb7)#define MCO\_PRE\_DIV\_1 0

[ 72](stm32wl__clock_8h.md#a36db847c7932669759f64844a15c42c3)#define MCO\_PRE\_DIV\_2 1

[ 73](stm32wl__clock_8h.md#a74c5b485d9169c489ab19e788b43c657)#define MCO\_PRE\_DIV\_4 2

[ 74](stm32wl__clock_8h.md#ad1bb69ff2fe6748978c31666f201947c)#define MCO\_PRE\_DIV\_8 3

[ 75](stm32wl__clock_8h.md#a111fd8dc5850b16b1308c8eaba8a9458)#define MCO\_PRE\_DIV\_16 4

76

77/\* MCO clock output \*/

[ 78](stm32wl__clock_8h.md#ac87285b6cbc31fb57dcd8f73d21f27d0)#define MCO\_SEL\_NOCLK 0

[ 79](stm32wl__clock_8h.md#a53d7140c4e0ee2e9da56c79819c62658)#define MCO\_SEL\_SYSCLKPRE 1

[ 80](stm32wl__clock_8h.md#adf5418cb8b57ef5cfc95306b8cf0b0b2)#define MCO\_SEL\_MSI 2

[ 81](stm32wl__clock_8h.md#adf2625b4cceede7fc3ba63f688a4e4e9)#define MCO\_SEL\_HSI16 3

[ 82](stm32wl__clock_8h.md#a21781f8cb4ed3c916d94ecfdd919d245)#define MCO\_SEL\_HSE32 4

[ 83](stm32wl__clock_8h.md#a6a5c7799714251e9577823a70ae43deb)#define MCO\_SEL\_PLL1RCLK 5

[ 84](stm32wl__clock_8h.md#a2d2499a8c8748def496cbcdde1582a47)#define MCO\_SEL\_LSI 6

[ 85](stm32wl__clock_8h.md#aaa9ea448ff6849b35f63fdfe07bc9bf2)#define MCO\_SEL\_LSE 8

[ 86](stm32wl__clock_8h.md#a9fdaaf9ec6ae71d7ef4baf491c828d5a)#define MCO\_SEL\_PLL1PCLK 13

[ 87](stm32wl__clock_8h.md#ace6964cb5c6328adc762e4917e9ed663)#define MCO\_SEL\_PLL1QCLK 14

88

89#endif /\* ZEPHYR\_INCLUDE\_DT\_BINDINGS\_CLOCK\_STM32WL\_CLOCK\_H\_ \*/

[stm32\_common\_clocks.h](stm32__common__clocks_8h.md)

- [zephyr](dir_6cbb653dcd0745b39bd039f02ad5bff5.md)
- [dt-bindings](dir_2e4d86f9d28357ce2f99093c0845149c.md)
- [clock](dir_6e9992ac75fd0b7a50e889108957c907.md)
- [stm32wl\_clock.h](stm32wl__clock_8h.md)
- Generated on  for Zephyr API Documentation by [![doxygen](doxygen.svg)](https://www.doxygen.org/index.html) 1.16.1
